--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div id="covid-update-positioning">
       <div id="covid-update-background">
         <span class="text-center">
-          <a id="covid-update" href="">Read our covid update</a>
+          <a id="covid-update" href="https://medium.com/@hackPHS/7-1-2020-coronavirus-update-30bb441ff565">Read our covid update</a>
         </span>
       </div>
     </div>
